--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(Langton_server C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(Langton_server main.c)
-target_link_libraries(Langton_server)
+target_link_libraries(Langton_server ws2_32)
